[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/RangeRobot/range_robot.png" type="Texture" id=1]
[ext_resource path="res://Enemies/RangeRobot/RangeRobot.gd" type="Script" id=2]
[ext_resource path="res://Enemies/RangeRobot/RangeRobotBullet.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.262, 32.802 )

[sub_resource type="CircleShape2D" id=2]
radius = 800.0

[node name="RangeRobot" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 23
script = ExtResource( 2 )
RangeRobotBullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -28.8572, 0.836929 )
shape = SubResource( 1 )

[node name="EngageArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngageArea"]
shape = SubResource( 2 )

[node name="RayCast" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 850, 0 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WeaponPosition" type="Position2D" parent="."]
position = Vector2( 34, 19 )
[connection signal="body_entered" from="EngageArea" to="." method="_on_EngageArea_body_entered"]
[connection signal="body_exited" from="EngageArea" to="." method="_on_EngageArea_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
